--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,3 +47,5 @@ criterion = "0.7.0"
 proptest = "1.4"
 #A simple and powerful library for creating temporary folders during tests.
 tempfile = "3.8"
+#A simple api testing
+axum-test = "18.1.0"
