feat(ui): Implement V1 Mnemonic Explorer with React and D3
Introduces the first version of the Mnemonic Explorer UI, a full-stack
web application that provides a real-time, interactive visualization
of the Mnemonic graph.

Key achievements:
- **Backend API:** The core Rust engine now exposes a complete V1
  REST API using Axum, with endpoints for creating concepts, creating
  relationships, and retrieving the entire active graph state. CORS
  is correctly configured for web browser access.
- **Frontend Project:** A new, modern frontend project has been
  initialized in the `explorer-ui` directory using React, TypeScript,
  and Vite.
- **Data Visualization:** A core `<GraphCanvas />` component has been
  built. It successfully fetches data from the backend API using
  Axios and renders it as a dynamic, force-directed graph with D3.js.
- **Database Seeding:** The backend engine now includes a 'seed'
  function that populates an empty database on first startup, providing
  a rich, immediate user experience for the Explorer UI.
- **Configuration:** Full-stack connectivity in Codespaces has been
  achieved by using a `.env` file for the backend URL and correctly
  configuring port visibility.

This commit marks the completion of the first tangible, user-facing
product in the Mnemonic ecosystem and validates the entire software
stack from the Rust backend to the browser.

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@ target
 /mre_data/
 /logs/
 
+#explorer-ui
+node_modules
+
+
 # RustRover
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
